test/golden96/{}.14986928820806517861.golden
INITIALPATH:7:23: error:
    • 
unexpected "}"
expecting an haskell expression
    • In the quasi-quotation: [fmt|{}|]
  |
7 | main = putStrLn [fmt|{}|]
  |                       ^